fix card modal on mobile & hybrid ad

--- a/src/components/CharacterCard/style.scss
+++ b/src/components/CharacterCard/style.scss
@@ -583,7 +583,7 @@
           height: 485px;
           background: linear-gradient(
             90deg,
-            rgba(black, 0.15) 40%,
+            rgba(black, 0.3) 40%,
             transparent 50%
           );
           pointer-events: none;
